[package]
name = "pyo3-apollo-derive"
version = "0.19.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/apollo/pyo3-apollo"
description = "Proc-macro's for pyo3-apollo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
arrow = { workspace = true }
apollo-core = { workspace = true, features = ["allow_unused"] }
apollo-ffi = { workspace = true }
apollo-plan = { workspace = true, features = ["allow_unused"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
apollo-python = { workspace = true, features = ["full"] }
pyo3-apollo = { workspace = true, features = ["derive"] }
trybuild = { version = "1", features = ["diff"] }
