[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "apollo-runtime-{{%RT_SUFFIX%}}"
description = "Blazingly fast DataFrame library"
readme = "README.md"
authors = [
  { name = "Ritchie Vink", email = "ritchie46@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = ["dataframe", "arrow", "out-of-core"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.apollo.org/"
Documentation = "https://docs.apollo.org/api/python/stable/reference/index.html"
Repository = "https://github.com/apollo/apollo"
Changelog = "https://github.com/apollo/apollo/releases"

[tool.maturin]
include = [
  { path = "rust-toolchain.toml", format = "sdist" },
  { path = "_apollo_runtime_{{%RT_SUFFIX%}}/build_feature_flags.py", format = ["sdist", "wheel"] },
]
module-name = "_apollo_runtime_{{%RT_SUFFIX%}}._apollo_runtime"
